# aorus-master-rag

./: .gitignore  README.md  pyproject.toml
benchmark-results/: qwen2.5-0.5b-q4km-cpu-generation.json  qwen2.5-0.5b-q4km-cpu-summary.md  qwen2.5-0.5b-q4km-gpu-generation.json  qwen2.5-0.5b-q4km-gpu-summary.md  qwen2.5-3b-q4km-gpu-generation-improved.json  qwen2.5-3b-q4km-gpu-generation.json  qwen2.5-3b-q4km-gpu-quality-summary.md
data/: aorus_master_16_am6h_specs.json
docs/: architecture.md  evaluation.md  verification.md
scripts/: install-llama-cpp-cu122.ps1
src/aorus_rag/: __init__.py  chunking.py  cli.py  data.py  embedding.py  evaluation.py  generator.py  models.py  pipeline.py  prompt.py  query.py  retriever.py  text.py
tests/: test_query_parser.py  test_retrieval.py
