[project]
name = "aorus-master-rag"
version = "0.1.0"
description = "Pure Python RAG assistant for GIGABYTE AORUS MASTER 16 AM6H specifications."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
generation = [
  "llama-cpp-python>=0.2.90,<0.3.0",
]

[project.scripts]
aorus-rag = "aorus_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aorus_rag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
